--- a/Cognitive-node-webview/app/html/assets/css/count-robots.css
+++ b/Cognitive-node-webview/app/html/assets/css/count-robots.css
@@ -51,3 +51,38 @@
   width:100%;
   height:100%;  
   }
+  
+.centerDiv
+	{
+		width:60%;		
+		margin: 0 auto;
+		width:800px;
+		padding: 10px;
+		height: 50px;
+		position: absolute;
+		margin-top:  -140px;
+		margin-left: -400px;
+		top: 50%;
+		left: 50%;
+		
+	}
+	.div1
+	{
+		width: 33%;			
+		float:left;
+		text-align=center;
+	}
+	.div2
+	{
+		width: 34%;			
+		float:left;
+		text-align=center;
+		
+	}
+	.div3
+	{
+		width: 33%;
+		float:left;
+		text-align=center;	
+		
+	}
